# dio-bank

./: .flaskenv  README.md  commandos.txt  pyproject.toml  render-deploy.sh
migrations/versions/: 86c5b2d39fb3_add_passowwrd_field.py  ce3d1ebbf351_initial_migration.py
src/: app.py  config.py  db.py  utils.py
src/controllers/: auth_controller.py  post_controller.py  role_controller.py  user_controller.py
src/models/: __init__.py  post.py  role.py  user.py
tests/integration/: conftest.py
tests/integration/controllers/: test_post.py  test_role.py  test_user.py
tests/unit/: test_utils.py
